# coacodex

./: .gitignore  coa_graph_optimizer.py  coa_optimizer_README.md  coa_optimizer_extensible.py  package.json  pyproject.toml
CoADataLogger/: CoADataLogger.lua  CoADataLogger.toc
coa_client_extract/: __init__.py  advancement.py  archive_backend.py  archive_plan.py  artifacts.py  attribution.py  cli.py  contracts.py  decode_advancement.py  errors.py  parity.py  recordview.py  spell_icons.py  spell_layout.py  spell_mechanics.py  spell_proof.py  spell_record.py  stormlib_backend.py  stormlib_ctypes.py  wdbc.py  wow_constants.py
coa_meta/: action_catalog.py  apl.py  apl_interpreter.py  backend_trust.py  build_diversity.py  builder_tree_layout.py  builds.py  cli.py  display_names.py  domain.py  explain.py  gear.py  guide_assets.py  guide_builder.py  guide_models.py  guide_rendering.py  guide_tooltips.py  guide_tree.py  guide_writer.py  leveling_path.py  mechanics.py  mechanics_repository.py  profiles.py  reporting.py  repository.py  roles.py  rotation_candidates.py  rotation_guides.py  rotation_loops.py  rotation_scoring.py  rotation_simulation.py  scoring.py  search.py  simulation.py  stats.py
coa_scraper/: package-lock.json  package.json  run-coa-postcapture.sh  scrape-coa-network.mjs
docs/: ARCHITECTURE.md  ASSESSMENT.md  DECISIONS.md  MODULES.md  NEXT_STEPS_DATA_COLLECTION.md  README.md  RETAIL_TOOLING_REFERENCES.md  ROADMAP.md  tree-parity-checklist.md
scripts/: fetch_guide_fonts.py
tests/: _spell_fixtures.py  test_action_catalog.py  test_action_catalog_interlock.py  test_apl_exports.py  test_apl_generation.py  test_apl_interpreter.py  test_cli.py  (+69 more)
(+141 files in other folders)
