[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coa-meta-analyzer"
version = "0.1.0"
description = "Ascension Conquest of Azeroth Phase 1 theorycraft meta analyzer"
readme = "docs/README.md"
requires-python = ">=3.11"
authors = [
  {name = "CoA Meta Analyzer contributors"}
]
dependencies = []

[project.scripts]
coa-meta = "coa_meta.cli:main"

[tool.setuptools]
packages = ["coa_meta", "coa_meta.combat", "coa_client_extract"]

[tool.setuptools.package-data]
coa_meta = [
  "data/scoring_profiles/*.json",
  "data/apl_profiles/*.json",
  "data/role_overrides.json",
  "data/spec_roles.json"
]
coa_client_extract = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "-m 'not stormlib and not client'"
markers = [
  "stormlib: requires a built/installed StormLib shared library (native integration tier)",
  "client: requires the local Ascension client install (acceptance tier)",
]
